# coin

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  test.sqlite3
.cargo/: config
lib/airtable-rs/: Cargo.toml
lib/airtable-rs/src/: client.rs  lib.rs
lib/basis-rs/: Cargo.toml
lib/basis-rs/src/: basis.rs  errors.rs  lib.rs
lib/cmc-rs/: Cargo.toml
lib/cmc-rs/src/: client.rs  errors.rs  lib.rs  model.rs
lib/coin-sdk/: Cargo.toml
lib/coin-sdk/src/: account.rs  api.rs  binance.rs  client_factory.rs  coinbase.rs  coinbasepro.rs  errors.rs  lib.rs  market.rs  model.rs  offline.rs  sdk.rs
lib/coinbase-rs/: Cargo.toml
lib/coinbase-rs/src/: account.rs  api.rs  client.rs  errors.rs  lib.rs  model.rs
migrations/2019-02-25-081731_create_posts/: up.sql
src/: airtable.rs  binance.rs  cmc.rs  coinbase.rs  coinbasepro.rs  main.rs  model.rs  portfolio.rs
src/clients/: airtable.rs  binance.rs  client.rs  cmc.rs  mod.rs
