[package]
name = "coin"
version = "0.1.0"
authors = ["Michael Paris <michael@scaphold.io>"]
edition = "2018"

[dependencies]
clap = "~2.27.0"
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
reqwest = "~0.9.5"
colored = "1.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
coinbase-pro-rs = "0.2.8"
prettytable-rs = "^0.8"
error-chain = "0.12"
